--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "leaflet": "^1.9.4",
     "masonry-layout": "^4.2.2",
     "metismenujs": "^1.4.0",
+    "moment": "^2.29.4",
     "ng-apexcharts": "^1.7.7",
     "ng-chartist": "^8.1.0",
     "ng-otp-input": "^1.9.2",
