exportacion de archivos añadido

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
       "es2020",
       "dom"
     ],
-    "useDefineForClassFields": false
+    "useDefineForClassFields": false,
+    "types": ["datatables.net"]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
