--- a/package.json
+++ b/package.json
@@ -38,15 +38,23 @@
     "@nicky-lenaers/ngx-scroll-to": "^14.0.0",
     "@popperjs/core": "^2.11.8",
     "@swimlane/ngx-datatable": "^20.1.0",
+    "angular-datatables": "^16.0.0",
     "angular-ng-stepper": "^2.0.0",
     "angularx-flatpickr": "^7.3.0",
     "apexcharts": "^3.41.0",
     "bootstrap": "5.3.0",
     "chart.js": "^4.3.0",
     "chartist": "^1.3.0",
+    "datatables.net": "^1.13.6",
+    "datatables.net-bs5": "^1.13.6",
+    "datatables.net-buttons": "^2.4.2",
+    "datatables.net-buttons-dt": "^2.4.2",
+    "datatables.net-dt": "^1.13.6",
     "echarts": "^5.4.2",
     "firebase": "^10.0.0",
     "flatpickr": "^4.6.13",
+    "jquery": "^3.7.1",
+    "jszip": "^3.10.1",
     "leaflet": "^1.9.4",
     "masonry-layout": "^4.2.2",
     "metismenujs": "^1.4.0",
@@ -61,6 +69,7 @@
     "ngx-drag-drop": "^16.0.0",
     "ngx-dropzone": "^3.1.0",
     "ngx-echarts": "^16.0.0",
+    "ngx-export-as": "^1.16.0",
     "ngx-image-cropper": "^7.0.1",
     "ngx-lightbox": "^3.0.0",
     "ngx-mask": "^16.2.3",
@@ -86,8 +95,11 @@
     "@angular/language-service": "^16.1.4",
     "@juggle/resize-observer": "^3.4.0",
     "@types/chartist": "^1.0.0",
+    "@types/datatables.net": "^1.10.24",
+    "@types/datatables.net-buttons": "^1.4.7",
     "@types/jasmine": "^4.3.5",
     "@types/jasminewd2": "^2.0.10",
+    "@types/jquery": "^3.5.18",
     "@types/leaflet": "^1.9.3",
     "@types/node": "^20.4.1",
     "@types/youtube": "^0.0.47",
