Implementación de ventas documentos, historial, comentarios

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
   "cSpell.words": [
     "IMICIALIZACIÓN",
-    "PREVIAZULIZADOR"
+    "PREVIAZULIZADOR",
+    "Previsualizar",
+    "Subscriptionciones"
   ]
 }
