--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,7 @@
               "src/assets"
             ],
             "styles": [
-            "node_modules/chartist/dist/index.css",
+              "node_modules/chartist/dist/index.css",
               "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css",
               "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css",
               "./node_modules/ngx-ui-switch/ui-switch.component.css",
@@ -45,8 +45,7 @@
               "src/assets/scss/icons.scss",
               "./node_modules/ngx-toastr/toastr.css",
               "./node_modules/ngx-toastr/toastr-old.css",
-              "node_modules/datatables.net-dt/css/jquery.dataTables.css",
-              "node_modules/datatables.net-buttons-dt/css/buttons.dataTables.css"
+              "node_modules/datatables.net-dt/css/jquery.dataTables.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.js",
