--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@fullcalendar/interaction": "^6.1.8",
     "@fullcalendar/list": "^6.1.8",
     "@fullcalendar/timegrid": "^6.1.8",
+    "@ng-bootstrap/ng-bootstrap": "^15.1.2",
     "@ng-select/ng-select": "^11.0.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
@@ -40,10 +41,12 @@
     "@swimlane/ngx-datatable": "^20.1.0",
     "angular-datatables": "^16.0.0",
     "angular-ng-stepper": "^2.0.0",
+    "angular-responsive-carousel": "^2.1.2",
     "angularx-flatpickr": "^7.3.0",
     "apexcharts": "^3.41.0",
     "bootstrap": "5.3.0",
-    "chart.js": "^4.3.0",
+    "carousel-angular": "^1.5.3",
+    "chart.js": "^4.4.0",
     "chartist": "^1.3.0",
     "datatables.net": "^1.13.6",
     "datatables.net-bs5": "^1.13.6",
@@ -85,7 +88,7 @@
     "sass-loader": "^13.3.2",
     "simplebar-angular": "^3.2.4",
     "sweetalert2": "^11.7.16",
-    "tslib": "^2.6.0",
+    "tslib": "^2.6.2",
     "zone.js": "^0.13.1"
   },
   "devDependencies": {
