--- a/angular.json
+++ b/angular.json
@@ -18,8 +18,24 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "allowedCommonJsDependencies": [
-              "rxjs", "core-js", "chart.js", "chartist","leaflet","sweetalert2","apexcharts","dropzone","file-saver","lodash","detect-passive-events",
-              "ev-emitter/ev-emitter","can-use-dom","lodash.debounce","lodash.memoize","lodash.throttle","metismenujs/dist/metismenujs","sweetalert2",
+              "rxjs",
+              "core-js",
+              "chart.js",
+              "chartist",
+              "leaflet",
+              "sweetalert2",
+              "apexcharts",
+              "dropzone",
+              "file-saver",
+              "lodash",
+              "detect-passive-events",
+              "ev-emitter/ev-emitter",
+              "can-use-dom",
+              "lodash.debounce",
+              "lodash.memoize",
+              "lodash.throttle",
+              "metismenujs/dist/metismenujs",
+              "sweetalert2",
               "@ckeditor/ckeditor5-build-classic"
             ],
             "outputPath": "dist/skote",
@@ -45,7 +61,9 @@
               "src/assets/scss/icons.scss",
               "./node_modules/ngx-toastr/toastr.css",
               "./node_modules/ngx-toastr/toastr-old.css",
-              "node_modules/datatables.net-dt/css/jquery.dataTables.css"
+              "node_modules/datatables.net-dt/css/jquery.dataTables.css",
+              "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.js",
