--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "ngx-echarts": "^16.0.0",
     "ngx-export-as": "^1.16.0",
     "ngx-image-cropper": "^7.0.1",
+    "ngx-infinite-scroll": "^17.0.0",
     "ngx-lightbox": "^3.0.0",
     "ngx-mask": "^16.2.3",
     "ngx-masonry": "^14.0.1",
