listado asincronico y edición de retail ids en venta

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "cSpell.words": [
     "ASINCRONICAMENTE",
+    "ASOINCRONICO",
     "IMICIALIZACIÓN",
     "PREVIAZULIZADOR",
     "Previsualizar",
