--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "ngx-owl-carousel-o": "^16.0.0",
     "ngx-pagination": "^6.0.3",
     "ngx-slider-v2": "^16.0.2",
+    "ngx-socket-io": "^4.6.1",
     "ngx-toastr": "^17.0.2",
     "ngx-ui-switch": "^14.0.3",
     "ngx-youtube-player": "^12.0.2",
